[package]
name = "musikjj"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = "4.5.57"
cpal = "0.17.1"

[dependencies.sdl2]
version = "0.38.0"
features = ["ttf", "gfx"]

# [dependencies.termabc]
# version = "0.1.0"
# path = "../termabc"

[dependencies.semmel]
version = "0.1.0"
path = "../semmel"
